arreglado upto, sacado cehqueo de limites sean variables